--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -60,10 +60,6 @@ h5 {
     transform: translateY(0%);
   }
 
-  &.scr_top {
-    transform: translateY(0%);
-  }
-
   ul {
     display: flex;
     justify-content: center;
@@ -75,7 +71,7 @@ h5 {
         color: #fff;
         font-weight: 700;
         font-size: 24px;
-        padding: 20px 25px;
+        padding: 15px 25px;
 
         &.on {
           color: blue;
@@ -92,7 +88,7 @@ h5 {
 
   h1 {
     text-align: center;
-    font-size: 55px;
+    font-size: 50px;
     padding-bottom: 50px;
     color: green;
   }
@@ -104,7 +100,7 @@ h5 {
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url(../images/141538b38ba7a798a78c9dd2c55f79d7.png);
+  background: url(../images/intro_bg.png);
   background-size: cover;
   background-position: 50% 100%;
   background-repeat: no-repeat;
@@ -140,10 +136,7 @@ h5 {
       100% {
         transform: rotate(360deg);
       }
-
     }
-
-
   }
 
   .intro_box {
@@ -156,7 +149,7 @@ h5 {
     align-items: center;
 
     span {
-      font-size: 50px;
+      font-size: 45px;
       font-weight: 700;
       color: #fff;
       letter-spacing: 1px;
@@ -164,7 +157,7 @@ h5 {
 
       .under {
         position: relative;
-        font-size: 70px;
+        font-size: 60px;
         color: cornflowerblue;
         text-shadow: 2px 2px #000, 3px 3px #000;
       }
@@ -220,28 +213,26 @@ h5 {
 
     .down {
       position: absolute;
-      bottom: 75px;
+      bottom: 85px;
       animation: ani 1.5s infinite;
       cursor: pointer;
 
       @keyframes ani {
         0% {
-          bottom: 75px;
+          transform: translateY(0%);
         }
 
         50% {
-          bottom: 50px;
+          transform: translateY(30%);
         }
 
         100% {
-          bottom: 75px;
+          transform: translateY(0%);
         }
       }
 
       .scroll {
-        position: absolute;
-        top: -70px;
-        left: -3px;
+        display: block;
         width: 40px;
         height: 60px;
         border-radius: 30px;
@@ -261,7 +252,7 @@ h5 {
       i {
         padding-top: 5px;
         font-size: 34px;
-        font-weight: 700;
+        text-align: center;
         line-height: 20px;
         display: block;
         color: #fff;
@@ -273,7 +264,7 @@ h5 {
 
 // 프로필
 #profile {
-  margin: 80px 0 120px 0;
+  padding: 80px 0 120px 0;
 
   .row {
     display: flex;
@@ -345,8 +336,7 @@ h5 {
 
 //능력사항
 #skill {
-  margin: 0 0 100px 0;
-  padding: 50px 0;
+  padding: 80px 0 120px 0;
 
   .skill_box {
     display: flex;
@@ -490,6 +480,7 @@ h5 {
   height: 100vh;
   display: flex;
   align-items: center;
+
   h1 {
     text-align: center;
     font-size: 55px;
@@ -567,7 +558,7 @@ h5 {
   background-color: #fff;
   cursor: pointer;
   z-index: 9999;
-  
+
   i {
     font-size: 50px;
     transition: .3s;
@@ -624,7 +615,7 @@ h5 {
       .down {
         position: absolute;
         animation: ani 2s infinite;
-        
+
         @keyframes ani {
           0% {
             bottom: 25px;
