--- a/CSS/main.css
+++ b/CSS/main.css
@@ -58,19 +58,23 @@ h5 {
   background-color: rgba(0, 0, 0, 0.8);
   transform: translateY(0%);
 }
-.header ul {
+.header h1 {
+  display: none;
+  text-align: center;
+}
+.header nav .navigation {
   display: flex;
   justify-content: center;
 }
-.header ul li a {
+.header nav .navigation a {
   display: block;
   color: #fff;
   font-weight: 700;
   font-size: 24px;
   padding: 15px 25px;
 }
-.header ul li a.on {
-  color: blue;
+.header nav .navigation a.on {
+  color: rgba(133, 163, 52, 0.65);
 }
 
 .container {
@@ -87,11 +91,10 @@ h5 {
 #intro {
   position: relative;
   display: flex;
-  width: 100%;
   height: 100vh;
   background: url(../images/intro_bg.png);
   background-size: cover;
-  background-position: 50% 100%;
+  background-position: 50% 90%;
   background-repeat: no-repeat;
 }
 #intro .intro_img {
@@ -126,6 +129,8 @@ h5 {
 #intro .intro_box {
   position: relative;
   height: 100%;
+  min-width: 1280px;
+  margin: 0 auto;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -228,7 +233,7 @@ h5 {
 }
 
 #profile {
-  padding: 80px 0 120px 0;
+  padding: 100px 0 150px;
 }
 #profile .row {
   display: flex;
@@ -279,7 +284,7 @@ h5 {
 }
 
 #skill {
-  padding: 80px 0 120px 0;
+  padding: 80px 0 150px 0;
 }
 #skill .skill_box {
   display: flex;
@@ -353,10 +358,10 @@ h5 {
 }
 
 #project {
-  margin: 0 0 100px 0;
+  padding: 80px 0 100px 0;
 }
 #project .project-Swiper {
-  margin: 0 60px;
+  margin: 0 50px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide {
   overflow: hidden;
@@ -364,7 +369,6 @@ h5 {
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
   position: relative;
   width: 100%;
-  height: 700px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p {
   position: absolute;
