--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -60,11 +60,15 @@ h5 {
     transform: translateY(0%);
   }
 
-  ul {
-    display: flex;
-    justify-content: center;
+  h1 {
+    display: none;
+    text-align: center;
+  }
 
-    li {
+  nav {
+    .navigation {
+      display: flex;
+      justify-content: center;
 
       a {
         display: block;
@@ -74,13 +78,14 @@ h5 {
         padding: 15px 25px;
 
         &.on {
-          color: blue;
+          color: rgba(133, 163, 52, 0.65);
         }
 
       }
     }
   }
 }
+
 
 .container {
   width: 1280px;
@@ -98,13 +103,11 @@ h5 {
 #intro {
   position: relative;
   display: flex;
-  width: 100%;
   height: 100vh;
   background: url(../images/intro_bg.png);
   background-size: cover;
-  background-position: 50% 100%;
+  background-position: 50% 90%;
   background-repeat: no-repeat;
-
 
   .intro_img {
     position: relative;
@@ -142,6 +145,8 @@ h5 {
   .intro_box {
     position: relative;
     height: 100%;
+    min-width: 1280px;
+    margin: 0 auto;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -264,7 +269,7 @@ h5 {
 
 // 프로필
 #profile {
-  padding: 80px 0 120px 0;
+  padding: 100px 0 150px;
 
   .row {
     display: flex;
@@ -336,7 +341,7 @@ h5 {
 
 //능력사항
 #skill {
-  padding: 80px 0 120px 0;
+  padding: 80px 0 150px 0;
 
   .skill_box {
     display: flex;
@@ -432,10 +437,10 @@ h5 {
 
 //프로젝트
 #project {
-  margin: 0 0 100px 0;
+  padding: 80px 0 100px 0;
 
   .project-Swiper {
-    margin: 0 60px;
+    margin: 0 50px;
 
     .swiper-wrapper {
 
@@ -445,10 +450,10 @@ h5 {
         .prject_box {
 
           .project_img {
+
             img {
               position: relative;
               width: 100%;
-              height: 700px;
             }
 
             p {
