포트폴리오

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -149,24 +149,24 @@ h5 {
   color: #fff;
   letter-spacing: 1px;
   text-shadow: 1px 1px #000, 3px 3px #000;
+  /* .under::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: yellow;
+  } */
 }
 #intro .intro_box p .under,
 #intro .intro_box span .under {
   position: relative;
   font-size: 60px;
   color: cornflowerblue;
-  text-shadow: 2px 2px #000, 3px 3px #000;
-}
-#intro .intro_box p .under::before,
-#intro .intro_box span .under::before {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  background-color: yellow;
+  text-shadow: 10px 5px 5px #000;
+  padding-right: 15px;
 }
 #intro .intro_box .bar {
   width: 300px;
@@ -241,7 +241,7 @@ h5 {
 }
 
 #profile {
-  padding: 100px 0 150px;
+  padding: 100px 0 120px;
 }
 #profile .row {
   display: flex;
@@ -292,40 +292,61 @@ h5 {
 }
 
 #skill {
-  padding: 80px 0 150px 0;
+  padding: 100px 0 150px 0;
 }
 #skill .skill_box {
   display: flex;
 }
+#skill .skill_box .skill_left {
+  display: flex;
+}
 #skill .skill_box .skill_left h2 {
-  font-size: 35px;
+  font-size: 36px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 #skill .skill_box .skill_left ul {
   display: flex;
   flex-wrap: wrap;
+  padding: 0 30px;
 }
 #skill .skill_box .skill_left ul li {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  width: 200px;
-  height: 200px;
-  line-height: 2;
-  text-align: center;
-  border: 1px solid black;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
-  margin-right: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+  margin-right: 40px;
+  box-shadow: 0 0 10px blueviolet;
 }
-#skill .skill_box .skill_left ul li:last-child {
+#skill .skill_box .skill_left ul li:nth-child(2n) {
   margin-right: 0;
 }
+#skill .skill_box .skill_left ul li img {
+  width: 50px;
+}
 #skill .skill_box .skill_left ul li p {
-  font-size: 24px;
+  font-size: 18px;
+  font-weight: 700;
+}
+#skill .skill_box .skill_left ul li p.percent {
+  font-size: 16px;
+  color: blue;
+}
+#skill .skill_box .skill_left .tools ul {
+  display: flex;
+  justify-content: center;
+}
+#skill .skill_box .skill_left .tools ul li {
+  margin-right: 0;
 }
 #skill .skill_box .skill_right {
-  width: 75%;
+  margin-top: 50px;
+  padding-left: 50px;
+  width: 100%;
 }
 #skill .skill_box .skill_right > div {
   background-color: rgb(248, 248, 248);
@@ -339,11 +360,11 @@ h5 {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 15px 30px;
+  padding: 15px 25px;
   cursor: pointer;
 }
 #skill .skill_box .skill_right > div .skill_header img {
-  width: 60px;
+  width: 40px;
   padding-right: 15px;
 }
 #skill .skill_box .skill_right > div .skill_header p {
@@ -353,14 +374,10 @@ h5 {
 #skill .skill_box .skill_right > div .skill_header i {
   position: absolute;
   font-size: 25px;
-  right: 20px;
-}
-#skill .skill_box .skill_right > div .skill_text {
-  overflow: hidden;
-  transition: height 0.3s;
+  right: 25px;
 }
 #skill .skill_box .skill_right > div .skill_text p {
-  padding: 15px 20px;
+  padding: 0px 25px 15px;
   font-size: 18px;
 }
 
