--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -277,7 +277,7 @@ h5 {
 
 // 프로필
 #profile {
-  padding: 100px 0 120px;
+  padding: 120px 0;
 
   .row {
     display: flex;
@@ -349,7 +349,7 @@ h5 {
 
 //능력사항
 #skill {
-  padding: 100px 0 150px 0;
+  padding: 120px 0;
 
   .skill_box {
     display: flex;
@@ -466,8 +466,7 @@ h5 {
 
 //프로젝트
 #project {
-  padding: 80px 0 100px 0;
-
+  padding: 120px 0;
   .project-Swiper {
     margin: 0 50px;
 
