--- a/CSS/main.css
+++ b/CSS/main.css
@@ -328,14 +328,15 @@ h5 {
   margin-right: 0;
 }
 #skill .skill_box .skill_left ul li img {
-  width: 50px;
+  width: 60px;
 }
 #skill .skill_box .skill_left ul li p {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
+  padding: 5px 0;
 }
 #skill .skill_box .skill_left ul li p.percent {
-  font-size: 16px;
+  font-size: 18px;
   color: blue;
 }
 #skill .skill_box .skill_left .tools ul {
@@ -386,15 +387,27 @@ h5 {
 #project {
   padding: 120px 0;
 }
-#project .project-Swiper {
-  margin: 0 50px;
+#project .project-Swiper .button {
+  position: absolute;
+  color: #000;
+  transform: translate(-50%, -50%);
+  left: 0;
+  z-index: 9999;
+}
+#project .project-Swiper .swiper-button-prev {
+  left: 20px;
+}
+#project .project-Swiper .swiper-button-next {
+  left: auto;
+  right: 0;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide {
-  overflow: hidden;
+  padding: 0 50px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
   position: relative;
   width: 100%;
+  height: 600px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p {
   position: absolute;
