포트폴리오

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -476,46 +476,121 @@ h5 {
     .button {
       position: absolute;
       color: #000;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
       left: 0;
       z-index: 9999;
     }
 
     .swiper-button-prev {
-      left: 20px;
+      left: 15px;
     }
 
     .swiper-button-next {
       left: auto;
-      right: 0;
+      right: -10px;
     }
 
-    .swiper-wrapper {
-      .swiper-slide {
-        padding: 0 50px;
+    ul {
+
+      li {
+        padding: 0 60px;
+
         .prject_box {
+          position: relative;
+          overflow: hidden;
+
+          &:hover {
+            .description {
+              transform: translateX(0);
+              opacity: 1;
+            }
+          }
 
           .project_img {
+            width: 100%;
+            position: relative;
 
             img {
-              position: relative;
               width: 100%;
-              height: 600px;
+              height: 650px;
             }
 
-            p {
-              position: absolute;
-              width: 100%;
-              top: 0;
-              left: 0;
+          }
 
-              img {
-                width: 90%;
-                height: 530px;
-                margin: 0 auto;
-                padding: 15px 0px;
+          .description {
+            position: absolute;
+            top: 0;
+            transform: translateX(100%);
+            opacity: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            background-color: rgba($color: #000000, $alpha: 0.8);
+            transition: .4s;
+
+            .desc_text {
+              margin: 0 auto;
+
+              h2 {
+                text-align: center;
+                font-size: 40px;
+                margin-bottom: 10px;
+                color: #fff;
+              }
+
+              h3 {
+                font-weight: 700;
+                font-size: 22px;
+                padding: 20px 0 5px;
+                text-align: center;
+                color: yellow;
+              }
+
+              p {
+                font-size: 20px;
+                color: #fff;
+                text-align: center;
+
+                &.use_skill {
+                  display: flex;
+                  justify-content: center;
+
+                  img {
+                    width: 50px;
+                    margin-right: 10px;
+
+                    &:last-child {
+                      margin-right: 0;
+                    }
+                  }
+                }
               }
             }
+
+            .go {
+              margin: 0 auto;
+
+              a {
+                display: block;
+                border: 2px solid #fff;
+                border-radius: 30px;
+                color: #fff;
+                padding: 15px 65px;
+                text-align: center;
+                margin-bottom: 15px;
+                transition: .3s;
+                font-weight: 700;
+
+                &:hover {
+                  background-color: #fff;
+                  color: #000;
+                }
+              }
+            }
+
+
           }
         }
       }
