--- a/CSS/main.css
+++ b/CSS/main.css
@@ -395,31 +395,93 @@ h5 {
   z-index: 9999;
 }
 #project .project-Swiper .swiper-button-prev {
-  left: 20px;
+  left: 15px;
 }
 #project .project-Swiper .swiper-button-next {
   left: auto;
-  right: 0;
+  right: -10px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide {
-  padding: 0 50px;
+#project .project-Swiper ul li {
+  padding: 0 60px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
+#project .project-Swiper ul li .prject_box {
   position: relative;
-  width: 100%;
-  height: 600px;
+  overflow: hidden;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p {
+#project .project-Swiper ul li .prject_box:hover .description {
+  transform: translateX(0);
+  opacity: 1;
+}
+#project .project-Swiper ul li .prject_box .project_img {
+  width: 100%;
+  position: relative;
+}
+#project .project-Swiper ul li .prject_box .project_img img {
+  width: 100%;
+  height: 650px;
+}
+#project .project-Swiper ul li .prject_box .description {
   position: absolute;
-  width: 100%;
   top: 0;
-  left: 0;
+  transform: translateX(100%);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.4s;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p img {
-  width: 90%;
-  height: 530px;
+#project .project-Swiper ul li .prject_box .description .desc_text {
   margin: 0 auto;
-  padding: 15px 0px;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text h2 {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 10px;
+  color: #fff;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text h3 {
+  font-weight: 700;
+  font-size: 22px;
+  padding: 20px 0 5px;
+  text-align: center;
+  color: yellow;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text p {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text p.use_skill {
+  display: flex;
+  justify-content: center;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text p.use_skill img {
+  width: 50px;
+  margin-right: 10px;
+}
+#project .project-Swiper ul li .prject_box .description .desc_text p.use_skill img:last-child {
+  margin-right: 0;
+}
+#project .project-Swiper ul li .prject_box .description .go {
+  margin: 0 auto;
+}
+#project .project-Swiper ul li .prject_box .description .go a {
+  display: block;
+  border: 2px solid #fff;
+  border-radius: 30px;
+  color: #fff;
+  padding: 15px 65px;
+  text-align: center;
+  margin-bottom: 15px;
+  transition: 0.3s;
+  font-weight: 700;
+}
+#project .project-Swiper ul li .prject_box .description .go a:hover {
+  background-color: #fff;
+  color: #000;
 }
 
 #contact {
