--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -502,6 +502,7 @@ h5 {
 
         .prject_box {
           position: relative;
+          border: 1px solid #777;
 
           &:hover {
             .description {
