--- a/CSS/main.css
+++ b/CSS/main.css
@@ -409,8 +409,8 @@ h5 {
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box {
   position: relative;
-  box-shadow: 0 0 10px black;
-  border-radius: 30px;
+  box-shadow: 8px 8px 2px #737272;
+  border-radius: 20px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box:hover .description {
   opacity: 1;
@@ -422,7 +422,7 @@ h5 {
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
   width: 100%;
   height: 650px;
-  border-radius: 30px;
+  border-radius: 20px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description {
   display: flex;
@@ -435,7 +435,7 @@ h5 {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   transition: 0.4s;
-  border-radius: 30px;
+  border-radius: 20px;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .desc_text h2 {
   text-align: center;
