--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -499,8 +499,8 @@ h5 {
 
         .prject_box {
           position: relative;
-          box-shadow: 0 0 10px black;
-          border-radius: 30px;
+          box-shadow: 8px 8px 2px #737272;
+          border-radius: 20px;
 
           &:hover {
             .description {
@@ -515,7 +515,7 @@ h5 {
             img {
               width: 100%;
               height: 650px;
-              border-radius: 30px;
+              border-radius: 20px;
             }
 
           }
@@ -531,7 +531,7 @@ h5 {
             height: 100%;
             background-color: rgba($color: #000000, $alpha: 0.8);
             transition: .4s;
-            border-radius: 30px;
+            border-radius: 20px;
 
             .desc_text {
               h2 {
