--- a/CSS/main.css
+++ b/CSS/main.css
@@ -407,24 +407,29 @@ h5 {
 #project .project-Swiper .swiper-wrapper .swiper-slide {
   padding: 0 50px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box {
-  position: relative;
-  box-shadow: 8px 8px 2px #737272;
-  border-radius: 20px;
+#project .project-Swiper .swiper-wrapper .swiper-slide.swiper-slide-active .project_box {
+  box-shadow: 10px 10px 2px #ccc;
+  scale: 1;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box:hover .description {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box {
+  position: relative;
+  border-radius: 20px;
+  scale: 0.8;
+  transition: 1s;
+}
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box:hover .description {
   opacity: 1;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .project_img {
   width: 100%;
   position: relative;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .project_img img {
   width: 100%;
   height: 650px;
   border-radius: 20px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -437,30 +442,30 @@ h5 {
   transition: 0.4s;
   border-radius: 20px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .desc_text h2 {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .desc_text h2 {
   text-align: center;
   font-size: 40px;
   margin-bottom: 10px;
   color: #fff;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .desc_text h3 {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .desc_text h3 {
   font-weight: 700;
   font-size: 22px;
   padding: 20px 0 5px;
   text-align: center;
   color: yellow;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .desc_text p {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .desc_text p {
   font-size: 20px;
   color: #fff;
   text-align: center;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .go {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .go {
   display: flex;
   justify-content: center;
   margin-top: 30px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .go a {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .go a {
   display: block;
   border: 2px solid #fff;
   border-radius: 30px;
@@ -470,10 +475,10 @@ h5 {
   font-weight: 700;
   margin-right: 15px;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .go a:last-child {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .go a:last-child {
   margin-right: 0;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .description .go a:hover {
+#project .project-Swiper .swiper-wrapper .swiper-slide .project_box .description .go a:hover {
   background-color: #fff;
   color: #000;
 }
@@ -526,7 +531,7 @@ h5 {
   background-color: #fff;
   transition: 0.1s;
   animation: ania 2s infinite;
-  box-shadow: 0 0 15px #eee;
+  box-shadow: 10px 10px 2px #ccc;
 }
 @keyframes ania {
   0% {
