--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -39,9 +39,7 @@ h5 {
   color: rgba(255, 255, 0, 0.889);
 }
 
-.wrap {
-  overflow: hidden;
-}
+.wrap {}
 
 // 헤더
 .header {
@@ -146,7 +144,6 @@ h5 {
   .intro_box {
     position: relative;
     height: 100%;
-    min-width: 1280px;
     margin: 0 auto;
     z-index: 1;
     display: flex;
@@ -175,16 +172,6 @@ h5 {
         padding-right: 15px;
       }
 
-      /* .under::before {
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        width: 100%;
-        height: 5px;
-        background-color: yellow;
-      } */
     }
 
     .bar {
@@ -468,7 +455,13 @@ h5 {
 #project {
   padding: 100px 0 120px;
 
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+
   .project-Swiper {
+    width: 1280px;
     overflow: visible;
 
     .button {
@@ -732,7 +725,11 @@ h5 {
 
 
 //반응형 코드
-@media (max-width:1280px) {
+@media (max-width:1279px) {
+  .container {
+    width: 100%;
+  }
+
   #intro {
     .intro_box {
       span {
@@ -751,6 +748,12 @@ h5 {
       }
     }
   }
+
+  #project {
+    .project-Swiper {
+      width: 100%;
+    }
+  }
 }
 
 
@@ -758,12 +761,18 @@ h5 {
 @media (max-width:680px) {
   #intro {
     .intro_box {
+      p {
+        font-size: 24px;
+
+        .under {
+          font-size: 30px;
+        }
+      }
+
       span {
         font-size: 20px;
 
-        .under {
-          font-size: 26px;
-        }
+
       }
 
       .typing {
@@ -815,6 +824,20 @@ h5 {
 
           }
         }
+      }
+    }
+
+    .intro_img {
+      img {
+        width: 513px;
+        top: -18px;
+        left: -90px;
+      }
+
+      &::after {
+        width: 280px;
+        height: 280px;
+        top: 35px;
       }
     }
   }
