--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -58,7 +58,8 @@ h5 {
     transform: translateY(0%);
   }
 
-  h1 {
+  h1,
+  p {
     display: none;
     text-align: center;
   }
@@ -759,6 +760,14 @@ h5 {
 
 //모바일
 @media (max-width:680px) {
+  .header {
+    h1 {
+      display: block;
+      font-weight: 700;
+      color: #fff;
+    }
+  }
+
   #intro {
     .intro_box {
       p {
@@ -917,17 +926,76 @@ h5 {
 
   #project {
     .project-Swiper {
-      margin: 0;
+      width: 100%;
 
       .swiper-wrapper {
 
         .swiper-slide {
-          overflow: hidden;
+          padding: 0;
 
-          img {
-            width: 100%;
-            height: 250px;
-            box-shadow: 0 0 5px #555;
+          &.swiper-slide-active {
+            .project_box {
+              box-shadow: none;
+            }
+          }
+
+          .project_box {
+            .project_img {
+
+              img {
+                width: 100%;
+                height: 260px;
+              }
+            }
+          }
+
+          .project_box {
+            scale: 1;
+
+            .description {
+              position: unset;
+              opacity: 1;
+              background-color: #fff;
+
+              .desc_text {
+
+                h2,
+                p {
+                  color: #000;
+                }
+
+                p {
+                  font-size: 16px;
+                }
+
+                h3 {
+                  color: violet;
+                }
+              }
+
+              .go {
+                a {
+                  color: #000;
+                  padding: 5px 8px;
+                  border-radius: 20px;
+                  border: 1px solid #777;
+                  margin-right: 10px;
+                }
+              }
+            }
+          }
+
+          .desc_skill {
+            .use_skill {
+              flex-wrap: wrap;
+
+              li {
+                img {
+                  width: 40px;
+                  padding: 5px;
+                }
+              }
+            }
           }
         }
       }
