--- a/CSS/main.css
+++ b/CSS/main.css
@@ -755,4 +755,25 @@ h5 {
     width: 40px;
     padding: 5px;
   }
+  #contact h1 {
+    font-size: 32px;
+  }
+  #contact .contact_box {
+    width: 90%;
+    padding: 25px 20px;
+  }
+  #contact .contact_box ul li img {
+    width: 40px;
+    height: 30px;
+  }
+  #contact .contact_box ul li span {
+    font-size: 24px;
+  }
+  #contact .contact_box ul li p, #contact .contact_box ul li a {
+    font-size: 20px;
+  }
+  #contact .contact_box ul li:last-child {
+    text-align: center;
+    padding: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
