--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1001,4 +1001,35 @@ h5 {
       }
     }
   }
+
+  #contact {
+    h1 {
+      font-size: 32px;
+    }
+
+    .contact_box {
+      width: 90%;
+      padding: 25px 20px;
+
+      ul {
+        li {
+          img {
+            width: 40px;
+            height: 30px;
+          }
+          span{
+            font-size: 24px;
+          }
+          p, a{
+            font-size: 20px;
+          }
+
+          &:last-child{
+            text-align: center;
+            padding: 0;
+          }
+        }
+      }
+    }
+  }
 }
